[gd_scene load_steps=7 format=3 uid="uid://q6vu7kf32cel"]

[ext_resource type="Theme" uid="uid://brmsm8x6ntpna" path="res://theme/furnace_theme.tres" id="1_86el3"]
[ext_resource type="StyleBox" uid="uid://biprx6rkh4548" path="res://style_box_9p_small.tres" id="2_cfchu"]
[ext_resource type="Texture2D" uid="uid://blugxvg6vsan5" path="res://resources/ui_assets/lvl.png" id="3_t1s5w"]
[ext_resource type="Texture2D" uid="uid://b6g6hi3j00ebv" path="res://resources/ui_assets/spark.png" id="4_ubhyq"]
[ext_resource type="Texture2D" uid="uid://cpcubwevvr3qb" path="res://resources/ui_assets/heat.png" id="5_q0kbt"]
[ext_resource type="Script" path="res://scripts/ui/stats_display.gd" id="6_script"]

[node name="StatsDisplay" type="Control"]
custom_minimum_size = Vector2(100, 43)
layout_mode = 3
anchor_left = 0.078
anchor_right = 0.078
offset_left = -49.920002
offset_right = -49.920002
theme = ExtResource("1_86el3")
script = ExtResource("6_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -21.5
offset_right = 50.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="LevelRow" type="HBoxContainer" parent="CenterContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/MarginContainer2/VBoxContainer/LevelRow"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_cfchu")

[node name="LevelValue" type="Label" parent="CenterContainer/MarginContainer2/VBoxContainer/LevelRow/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_right = 29.0
offset_bottom = 9.0
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="CenterContainer/MarginContainer2/VBoxContainer/LevelRow/Panel"]
position = Vector2(6, 4.5)
texture = ExtResource("3_t1s5w")

[node name="Label" type="Label" parent="CenterContainer/MarginContainer2/VBoxContainer/LevelRow"]
layout_mode = 2
text = "Soot Vanquished"

[node name="MoneyRow" type="HBoxContainer" parent="CenterContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/MarginContainer2/VBoxContainer/MoneyRow"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_cfchu")

[node name="MoneyValue" type="Label" parent="CenterContainer/MarginContainer2/VBoxContainer/MoneyRow/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_right = 29.0
offset_bottom = 9.0
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="CenterContainer/MarginContainer2/VBoxContainer/MoneyRow/Panel"]
position = Vector2(6, 4.5)
texture = ExtResource("4_ubhyq")

[node name="Label" type="Label" parent="CenterContainer/MarginContainer2/VBoxContainer/MoneyRow"]
layout_mode = 2
text = "Sparks Used"

[node name="HeatRow" type="HBoxContainer" parent="CenterContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/MarginContainer2/VBoxContainer/HeatRow"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_cfchu")

[node name="HeatValue" type="Label" parent="CenterContainer/MarginContainer2/VBoxContainer/HeatRow/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_right = 29.0
offset_bottom = 9.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="CenterContainer/MarginContainer2/VBoxContainer/HeatRow/Panel"]
position = Vector2(6, 4.5)
texture = ExtResource("5_q0kbt")

[node name="Label" type="Label" parent="CenterContainer/MarginContainer2/VBoxContainer/HeatRow"]
layout_mode = 2
text = "Damage Dealt"
